--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,8 +28,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".ui.principal.PrincipalActivity"
+            android:theme="@style/AppTheme" />
+
+        <activity
+            android:name=".ui.details.principal.DetailsPersonActivity"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
